terraform/data_replication/rds.tf
resource "aws_db_subnet_group" "dbsg" {
  name       = "${local.name_prefix}-subnet-group"
  subnet_ids = [aws_subnet.subnet_a.id, aws_subnet.subnet_b.id]
}

resource "aws_security_group" "rds" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "${local.name_prefix}-rds-sg"
  }
}

resource "aws_security_group_rule" "ecs_to_grafana" {
  type                     = "egress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = module.db_access_service.security_group_id
  source_security_group_id = aws_security_group.rds.id
}

resource "aws_security_group_rule" "rds_inbound" {
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = aws_security_group.rds.id
  source_security_group_id = module.db_access_service.security_group_id
}

resource "aws_security_group_rule" "rds_inbound_grafana" {
  type              = "ingress"
  from_port         = 5432
  to_port           = 5432
  protocol          = "tcp"
  security_group_id = aws_security_group.rds.id
  cidr_blocks       = [aws_vpc.vpc.cidr_block]
  description       = "Allow Grafana workspace access to PostgreSQL"
}

resource "aws_rds_cluster" "this" {
  cluster_identifier          = "${local.name_prefix}-rds-${formatdate("hh-mm-ss", timestamp())}"
  engine                      = "aurora-postgresql"
  engine_mode                 = "provisioned"
  database_name               = "manage_vaccinations"
  master_username             = "postgres"
  snapshot_identifier         = var.imported_snapshot
  db_subnet_group_name        = aws_db_subnet_group.dbsg.name
  vpc_security_group_ids      = [aws_security_group.rds.id]
  storage_encrypted           = true
  skip_final_snapshot         = true
  deletion_protection         = false
  manage_master_user_password = true
  engine_version              = var.db_engine_version

  serverlessv2_scaling_configuration {
    max_capacity = var.max_aurora_capacity_units
    min_capacity = 0.5
  }

  lifecycle {
    ignore_changes = [cluster_identifier, snapshot_identifier]
  }
}

resource "aws_rds_cluster_instance" "this" {
  cluster_identifier   = aws_rds_cluster.this.id
  identifier           = "${local.name_prefix}-rds-instance-${formatdate("hh-mm-ss", timestamp())}"
  instance_class       = "db.serverless"
  engine               = aws_rds_cluster.this.engine
  engine_version       = aws_rds_cluster.this.engine_version
  db_subnet_group_name = aws_db_subnet_group.dbsg.name
  promotion_tier       = 1

  lifecycle {
    ignore_changes = [identifier]
  }
}
